--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,9 @@
 h1 {
   font-family: "Poppins", serif;
   font-size:32px;
+  @media (max-width:600px) {
+    font-size:20px;
+  }
   margin-bottom:50px;
   text-align:center;
   text-transform: uppercase;
@@ -66,6 +69,9 @@ h1 {
   gap:10px;
   margin-bottom:30px;
   width:50%;
+  @media (max-width:600px) {
+    width:95%;
+  }
   margin:auto;
   font-family: "Poppins", serif;
     .search-input {
@@ -116,13 +122,26 @@ h1 {
 
 .meailInfo {
   display: flex;
+  @media (max-width:1023px) {
+    display:block;
+  }
   gap: 20px;
   background: #f9f9f9;
   padding: 20px;
   border: 1px #ccc solid;
   margin-bottom:50px;
+    img {
+      max-width:100%;
+      height:auto;
+      width:100%;
+    }
     .info {
-      font-style: italic;     
+      font-style: italic;  
+        h2 {
+          @media (max-width:1023px) {
+            margin-top:20px;
+          }
+        }   
     }
 }
 
